# mlops-homework

HW2/step4_ge_validation_data/: .gitignore  .pre-commit-config.yaml  dvc.yaml  params.yaml  pyproject.toml
HW2/step4_ge_validation_data/metrics/: metrics.json
HW2/step4_ge_validation_data/models/: model.pkl
HW2/step4_ge_validation_data/src/: evaluate.py  get_data.py  validate_model.py
HW2/step4_monitoring/src/: advanced_monitor.py  monitor.py
step2_function_calling/: dance_creator.py
step4_ge_validation_data/: README.md
step4_ge_validation_data/src/: evaluate.py  get_data.py  validate_model.py
